--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:27:40 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:28:23 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ E thru 8</td>
 -2 thru 11</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 9</td>
+      <td class="greyout">Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -300,6 +300,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry -1
+-2 thru 11</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-5</td>
       <td>Hideki Matsuyama -2
@@ -380,22 +396,6 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -4
--1 thru 8</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry -1
--2 thru 11</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -4
@@ -412,6 +412,22 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-3</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
+      <td>Cameron Smith(W) -1
++3 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry -1
@@ -422,8 +438,8 @@ Missed Cut</td>
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 8</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 9</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -476,22 +492,6 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 10</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td class="greyout leftborder">Marc Leishman +4
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -1
@@ -524,6 +524,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -2
@@ -540,6 +556,54 @@ E (F)</td>
 Out With Injury</td>
     </tr>
     <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -1
++3 thru 10</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">0</td>
+      <td>Shane Lowry -1
+-2 thru 11</td>
+      <td>Cameron Smith -1
++3 thru 10</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">0</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
+      <td>Cameron Smith -1
++3 thru 10</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Rory McIlroy(W) +2
++1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +2
++3 thru 9</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">0</td>
       <td>Joaquin Niemann -2
@@ -554,22 +618,6 @@ Out With Injury</td>
 +2 (F)</td>
       <td class="greyout">Brian Harman +5
 +3 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler -4
--1 thru 8</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -620,52 +668,36 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith -1
-+3 thru 10</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Tiger Woods(W) +2
++3 thru 9</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
-      <td>Shane Lowry -1
--2 thru 11</td>
-      <td>Cameron Smith -1
-+3 thru 10</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">1</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Cameron Smith -1
-+3 thru 10</td>
-      <td>Rory McIlroy(W) +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td class="greyout leftborder">Tiger Woods +2
-+3 thru 9</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -700,36 +732,36 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Jon Rahm(W) +2
 E (F)</td>
-      <td>Tiger Woods(W) +2
-+3 thru 9</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
--2 thru 8</td>
-      <td class="greyout">Viktor Hovland +4
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Wylie</td>
       <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Brooks Koepka +6
 +3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -748,36 +780,36 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">3</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
+      <td>Cameron Smith(W) -1
++3 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Viktor Hovland +4
 +4 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">4</td>
       <td>Scottie Scheffler -4
 -1 thru 8</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -796,16 +828,32 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
-      <td>Cameron Smith(W) -1
-+3 thru 10</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Tiger Woods +2
++3 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">4</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -844,49 +892,17 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">5</td>
-      <td>Scottie Scheffler -4
--1 thru 8</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Daniel Berger +1
++2 thru 10</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td>Tiger Woods +2
-+3 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm(W) +2
+      <td>Jon Rahm +2
 E (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +6
+      <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
@@ -924,28 +940,12 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">6</td>
-      <td>Daniel Berger +1
-+2 thru 10</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -957,13 +957,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
@@ -973,15 +973,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Patrick Cantlay(W) +1
 +3 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -989,19 +989,35 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">7</td>
+      <td>Cameron Smith -1
++3 thru 10</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1036,28 +1052,12 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">8</td>
-      <td>Cameron Smith -1
-+3 thru 10</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">14</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td>Brooks Koepka +6
@@ -1069,9 +1069,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1085,9 +1085,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">14</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
+      <td class="bigbold">13</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
