--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:27:40 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:28:23 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,10 +150,10 @@ E (F)</td>
 E thru 8</td>
       <td>Shane Lowry -1
 -2 thru 11</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 9</td>
+      <td class="greyout">Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout">Justin Thomas(W) +2
--2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -198,8 +198,24 @@ E (F)</td>
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 8</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 9</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-2</td>
+      <td>Sungjae Im -3
++2 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -212,40 +228,24 @@ E (F)</td>
 E (F)</td>
       <td>Tony Finau -1
 E thru 8</td>
-      <td>Daniel Berger +1
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td class="greyout leftborder">Daniel Berger +1
 +2 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 8</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
-      <td>Sungjae Im -3
-+2 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Joaquin Niemann -2
 +1 thru 9</td>
       <td>Cameron Smith -1
 +3 thru 10</td>
       <td>Tommy Fleetwood(W) E
 -3 thru 10</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
       <td class="greyout leftborder">Rory McIlroy +2
 +1 (F)</td>
       <td class="greyout">Viktor Hovland +4
@@ -253,19 +253,35 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Shane Lowry -1
 -2 thru 11</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
       <td class="greyout">Tyrrell Hatton +2
 +2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">1</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Russell Henley +3
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele(W) +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -316,30 +332,14 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">2</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
-      <td>Russell Henley +3
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -1
 +3 thru 10</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 8</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -381,11 +381,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Jordan Spieth +6
